@@ -76,7 +76,6 @@ import org.elasticsearch.threadpool.ThreadPool;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -88,9 +87,6 @@ import java.util.Set;
 import java.util.SortedMap;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-
-import static java.util.Collections.singleton;
-import static java.util.Collections.unmodifiableMap;
 
 /**
  * Service responsible for submitting open/close index requests as well as for adding index blocks
@@ -117,10 +113,15 @@ public class MetadataIndexStateService {
 
     private final ClusterService clusterService;
     private final AllocationService allocationService;
+    private final IndexMetadataVerifier indexMetadataVerifier;
+    private final IndicesService indicesService;
+    private final ShardLimitValidator shardLimitValidator;
     private final NodeClient client;
     private final ThreadPool threadPool;
     private final ActiveShardsObserver activeShardsObserver;
     private final ClusterStateTaskExecutor<OpenIndicesTask> opensExecutor;
+    private final ClusterStateTaskExecutor<AddBlocksToCloseTask> addBlocksToCloseExecutor;
+    private final ClusterStateTaskExecutor<CloseIndicesTask> closesExecutor;
 
     @Inject
     public MetadataIndexStateService(
@@ -134,10 +135,15 @@ public class MetadataIndexStateService {
     ) {
         this.clusterService = clusterService;
         this.allocationService = allocationService;
+        this.indexMetadataVerifier = indexMetadataVerifier;
+        this.indicesService = indicesService;
+        this.shardLimitValidator = shardLimitValidator;
         this.client = client;
         this.threadPool = threadPool;
         this.activeShardsObserver = new ActiveShardsObserver(clusterService, threadPool);
-        this.opensExecutor = new OpenIndicesExecutor(allocationService, indexMetadataVerifier, indicesService, shardLimitValidator);
+        this.opensExecutor = new OpenIndicesExecutor();
+        this.addBlocksToCloseExecutor = new AddBlocksToCloseExecutor();
+        this.closesExecutor = new CloseIndicesExecutor();
     }
 
     /**
@@ -147,114 +153,153 @@ public class MetadataIndexStateService {
      * to be terminated and finally closes the indices by moving their state to CLOSE.
      */
     public void closeIndices(final CloseIndexClusterStateUpdateRequest request, final ActionListener<CloseIndexResponse> listener) {
-        final Index[] concreteIndices = request.indices();
-        if (concreteIndices == null || concreteIndices.length == 0) {
+        if (request.indices() == null || request.indices().length == 0) {
             throw new IllegalArgumentException("Index name is required");
         }
 
         clusterService.submitStateUpdateTask(
-            "add-block-index-to-close " + Arrays.toString(concreteIndices),
-            new ClusterStateUpdateTask(Priority.URGENT, request.masterNodeTimeout()) {
-
-                private final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
-
-                @Override
-                public ClusterState execute(final ClusterState currentState) {
-                    return addIndexClosedBlocks(concreteIndices, blockedIndices, currentState);
-                }
-
-                @Override
-                public void clusterStateProcessed(final ClusterState oldState, final ClusterState newState) {
-                    if (oldState == newState) {
-                        assert blockedIndices.isEmpty() : "List of blocked indices is not empty but cluster state wasn't changed";
-                        listener.onResponse(new CloseIndexResponse(true, false, Collections.emptyList()));
-                    } else {
-                        assert blockedIndices.isEmpty() == false : "List of blocked indices is empty but cluster state was changed";
-                        threadPool.executor(ThreadPool.Names.MANAGEMENT)
-                            .execute(
-                                new WaitForClosedBlocksApplied(
-                                    blockedIndices,
-                                    request,
-                                    ActionListener.wrap(
-                                        verifyResults -> clusterService.submitStateUpdateTask(
-                                            "close-indices",
-                                            new ClusterStateUpdateTask(Priority.URGENT) {
-                                                private final List<IndexResult> indices = new ArrayList<>();
-
-                                                @Override
-                                                public ClusterState execute(final ClusterState currentState) throws Exception {
-                                                    Tuple<ClusterState, Collection<IndexResult>> closingResult = closeRoutingTable(
-                                                        currentState,
-                                                        blockedIndices,
-                                                        verifyResults
-                                                    );
-                                                    assert verifyResults.size() == closingResult.v2().size();
-                                                    indices.addAll(closingResult.v2());
-                                                    return allocationService.reroute(closingResult.v1(), "indices closed");
-                                                }
-
-                                                @Override
-                                                public void onFailure(final Exception e) {
-                                                    listener.onFailure(e);
-                                                }
-
-                                                @Override
-                                                public void clusterStateProcessed(
-                                                    final ClusterState oldState,
-                                                    final ClusterState newState
-                                                ) {
-
-                                                    final boolean acknowledged = indices.stream().noneMatch(IndexResult::hasFailures);
-                                                    final String[] waitForIndices = indices.stream()
-                                                        .filter(result -> result.hasFailures() == false)
-                                                        .filter(result -> newState.routingTable().hasIndex(result.getIndex()))
-                                                        .map(result -> result.getIndex().getName())
-                                                        .toArray(String[]::new);
-
-                                                    if (waitForIndices.length > 0) {
-                                                        activeShardsObserver.waitForActiveShards(
-                                                            waitForIndices,
-                                                            request.waitForActiveShards(),
-                                                            request.ackTimeout(),
-                                                            shardsAcknowledged -> {
-                                                                if (shardsAcknowledged == false) {
-                                                                    logger.debug(
-                                                                        "[{}] indices closed, but the operation timed out while waiting "
-                                                                            + "for enough shards to be started.",
-                                                                        Arrays.toString(waitForIndices)
-                                                                    );
-                                                                }
-                                                                // acknowledged maybe be false but some indices may have been correctly
-                                                                // closed, so we maintain a kind of coherency by overriding the
-                                                                // shardsAcknowledged value (see ShardsAcknowledgedResponse constructor)
-                                                                boolean shardsAcked = acknowledged ? shardsAcknowledged : false;
-                                                                listener.onResponse(
-                                                                    new CloseIndexResponse(acknowledged, shardsAcked, indices)
-                                                                );
-                                                            },
-                                                            listener::onFailure
-                                                        );
-                                                    } else {
-                                                        listener.onResponse(new CloseIndexResponse(acknowledged, false, indices));
-                                                    }
-                                                }
-                                            },
-                                            ClusterStateTaskExecutor.unbatched()
-                                        ),
-                                        listener::onFailure
-                                    )
-                                )
-                            );
-                    }
-                }
-
-                @Override
-                public void onFailure(final Exception e) {
-                    listener.onFailure(e);
-                }
-            },
-            ClusterStateTaskExecutor.unbatched()
+            "add-block-index-to-close " + Arrays.toString(request.indices()),
+            new AddBlocksToCloseTask(request, listener),
+            ClusterStateTaskConfig.build(Priority.URGENT, request.masterNodeTimeout()),
+            this.addBlocksToCloseExecutor
         );
+    }
+
+    private class AddBlocksToCloseExecutor implements ClusterStateTaskExecutor<AddBlocksToCloseTask> {
+
+        @Override
+        public ClusterTasksResult<AddBlocksToCloseTask> execute(ClusterState currentState, List<AddBlocksToCloseTask> tasks)
+            throws Exception {
+            ClusterTasksResult.Builder<AddBlocksToCloseTask> builder = ClusterTasksResult.builder();
+            ClusterState state = currentState;
+
+            for (AddBlocksToCloseTask task : tasks) {
+                try {
+                    final Map<Index, ClusterBlock> blockedIndices = new HashMap<>(task.request.indices().length);
+                    state = addIndexClosedBlocks(task.request.indices(), blockedIndices, state);
+                    builder.success(task, task.listener.delegateFailure((delegate1, clusterState) -> {
+                        if (blockedIndices.isEmpty()) {
+                            delegate1.onResponse(CloseIndexResponse.EMPTY);
+                        } else {
+                            threadPool.executor(ThreadPool.Names.MANAGEMENT)
+                                .execute(
+                                    new WaitForClosedBlocksApplied(
+                                        blockedIndices,
+                                        task.request,
+                                        delegate1.delegateFailure((delegate2, verifyResults) -> {
+                                            clusterService.submitStateUpdateTask(
+                                                "close-indices",
+                                                new CloseIndicesTask(task.request, blockedIndices, verifyResults, delegate2),
+                                                ClusterStateTaskConfig.build(Priority.URGENT),
+                                                closesExecutor
+                                            );
+                                        })
+                                    )
+                                );
+                        }
+                    }));
+                } catch (Exception e) {
+                    builder.failure(task, e);
+                }
+            }
+
+            return builder.build(state);
+        }
+    }
+
+    private record AddBlocksToCloseTask(CloseIndexClusterStateUpdateRequest request, ActionListener<CloseIndexResponse> listener)
+        implements
+            ClusterStateTaskListener {
+
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
+
+        @Override
+        public void clusterStateProcessed(ClusterState oldState, ClusterState newState) {
+            assert false : "not called";
+        }
+    }
+
+    private class CloseIndicesExecutor implements ClusterStateTaskExecutor<CloseIndicesTask> {
+
+        @Override
+        public ClusterTasksResult<CloseIndicesTask> execute(ClusterState currentState, List<CloseIndicesTask> tasks) throws Exception {
+            ClusterTasksResult.Builder<CloseIndicesTask> builder = ClusterTasksResult.builder();
+            ClusterState state = currentState;
+
+            for (CloseIndicesTask task : tasks) {
+                try {
+                    final Tuple<ClusterState, List<IndexResult>> closingResult = closeRoutingTable(
+                        state,
+                        task.blockedIndices,
+                        task.verifyResults
+                    );
+                    state = closingResult.v1();
+                    final List<IndexResult> indices = closingResult.v2();
+                    assert indices.size() == task.verifyResults.size();
+
+                    builder.success(task, task.listener.delegateFailure((delegate, clusterState) -> {
+                        final boolean acknowledged = indices.stream().noneMatch(IndexResult::hasFailures);
+                        final String[] waitForIndices = indices.stream()
+                            .filter(result -> result.hasFailures() == false)
+                            .filter(result -> clusterState.routingTable().hasIndex(result.getIndex()))
+                            .map(result -> result.getIndex().getName())
+                            .toArray(String[]::new);
+
+                        if (waitForIndices.length > 0) {
+                            activeShardsObserver.waitForActiveShards(
+                                waitForIndices,
+                                task.request.waitForActiveShards(),
+                                task.request.ackTimeout(),
+                                shardsAcknowledged -> {
+                                    if (shardsAcknowledged == false) {
+                                        logger.debug(
+                                            "[{}] indices closed, but the operation timed out while "
+                                                + "waiting for enough shards to be started.",
+                                            Arrays.toString(waitForIndices)
+                                        );
+                                    }
+                                    // acknowledged maybe be false but some indices may have been correctly closed,
+                                    // so we maintain a kind of coherency by overriding the shardsAcknowledged value
+                                    // (see ShardsAcknowledgedResponse constructor)
+                                    boolean shardsAcked = acknowledged ? shardsAcknowledged : false;
+                                    delegate.onResponse(new CloseIndexResponse(acknowledged, shardsAcked, indices));
+                                },
+                                delegate::onFailure
+                            );
+                        } else {
+                            delegate.onResponse(new CloseIndexResponse(acknowledged, false, indices));
+                        }
+                    }));
+                } catch (Exception e) {
+                    builder.failure(task, e);
+                }
+            }
+
+            state = allocationService.reroute(state, "indices closed");
+
+            return builder.build(state);
+        }
+    }
+
+    private record CloseIndicesTask(
+        CloseIndexClusterStateUpdateRequest request,
+        Map<Index, ClusterBlock> blockedIndices,
+        Map<Index, CloseIndexResponse.IndexResult> verifyResults,
+        ActionListener<CloseIndexResponse> listener
+    ) implements ClusterStateTaskListener {
+
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
+
+        @Override
+        public void clusterStateProcessed(ClusterState oldState, ClusterState newState) {
+            assert false : "not called";
+        }
     }
 
     /**
@@ -358,7 +403,7 @@ public class MetadataIndexStateService {
         }
 
         if (indicesToAddBlock.isEmpty()) {
-            return Tuple.tuple(currentState, Collections.emptyMap());
+            return Tuple.tuple(currentState, Map.of());
         }
 
         final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
@@ -460,7 +505,7 @@ public class MetadataIndexStateService {
                 public void clusterStateProcessed(final ClusterState oldState, final ClusterState newState) {
                     if (oldState == newState) {
                         assert blockedIndices.isEmpty() : "List of blocked indices is not empty but cluster state wasn't changed";
-                        listener.onResponse(new AddIndexBlockResponse(true, false, Collections.emptyList()));
+                        listener.onResponse(AddIndexBlockResponse.EMPTY);
                     } else {
                         assert blockedIndices.isEmpty() == false : "List of blocked indices is empty but cluster state was changed";
                         threadPool.executor(ThreadPool.Names.MANAGEMENT)
@@ -480,7 +525,7 @@ public class MetadataIndexStateService {
 
                                                 @Override
                                                 public ClusterState execute(final ClusterState currentState) throws Exception {
-                                                    Tuple<ClusterState, Collection<AddBlockResult>> addBlockResult = finalizeBlock(
+                                                    Tuple<ClusterState, List<AddBlockResult>> addBlockResult = finalizeBlock(
                                                         currentState,
                                                         blockedIndices,
                                                         verifyResults,
@@ -558,7 +603,7 @@ public class MetadataIndexStateService {
                 waitForShardsReadyForClosing(index, block, state, response -> {
                     results.put(index, response);
                     if (countDown.countDown()) {
-                        listener.onResponse(unmodifiableMap(results));
+                        listener.onResponse(Map.copyOf(results));
                     }
                 });
             });
@@ -690,7 +735,7 @@ public class MetadataIndexStateService {
                 waitForShardsReady(index, block, state, response -> {
                     results.put(index, response);
                     if (countDown.countDown()) {
-                        listener.onResponse(unmodifiableMap(results));
+                        listener.onResponse(Map.copyOf(results));
                     }
                 });
             });
@@ -779,7 +824,7 @@ public class MetadataIndexStateService {
     /**
      * Step 3 - Move index states from OPEN to CLOSE in cluster state for indices that are ready for closing.
      */
-    static Tuple<ClusterState, Collection<IndexResult>> closeRoutingTable(
+    static Tuple<ClusterState, List<IndexResult>> closeRoutingTable(
         final ClusterState currentState,
         final Map<Index, ClusterBlock> blockedIndices,
         final Map<Index, IndexResult> verifyResult
@@ -822,7 +867,7 @@ public class MetadataIndexStateService {
                 }
 
                 // Check if index closing conflicts with any running restores
-                Set<Index> restoringIndices = RestoreService.restoringIndices(currentState, singleton(index));
+                Set<Index> restoringIndices = RestoreService.restoringIndices(currentState, Set.of(index));
                 if (restoringIndices.isEmpty() == false) {
                     closingResults.put(
                         result.getKey(),
@@ -838,7 +883,7 @@ public class MetadataIndexStateService {
                 }
 
                 // Check if index closing conflicts with any running snapshots
-                Set<Index> snapshottingIndices = SnapshotsService.snapshottingIndices(currentState, singleton(index));
+                Set<Index> snapshottingIndices = SnapshotsService.snapshottingIndices(currentState, Set.of(index));
                 if (snapshottingIndices.isEmpty() == false) {
                     closingResults.put(
                         result.getKey(),
@@ -872,7 +917,7 @@ public class MetadataIndexStateService {
         logger.info("completed closing of indices {}", closedIndices);
         return Tuple.tuple(
             ClusterState.builder(currentState).blocks(blocks).metadata(metadata).routingTable(routingTable).build(),
-            closingResults.values()
+            List.copyOf(closingResults.values())
         );
     }
 
@@ -906,9 +951,8 @@ public class MetadataIndexStateService {
             throw new IllegalArgumentException("Index name is required");
         }
 
-        final String indicesAsString = Arrays.toString(request.indices());
         clusterService.submitStateUpdateTask(
-            "open-indices " + indicesAsString,
+            "open-indices " + Arrays.toString(request.indices()),
             new OpenIndicesTask(request, listener),
             ClusterStateTaskConfig.build(Priority.URGENT, request.masterNodeTimeout()),
             this.opensExecutor
@@ -923,7 +967,7 @@ public class MetadataIndexStateService {
      * @param block the full block to convert to
      * @return the updated cluster state, as well as the (failed and successful) index-level results for adding the block
      */
-    private static Tuple<ClusterState, Collection<AddBlockResult>> finalizeBlock(
+    private static Tuple<ClusterState, List<AddBlockResult>> finalizeBlock(
         final ClusterState currentState,
         final Map<Index, ClusterBlock> blockedIndices,
         final Map<Index, AddBlockResult> verifyResult,
@@ -982,7 +1026,7 @@ public class MetadataIndexStateService {
             }
         }
         logger.info("completed adding block {} to indices {}", block.name, effectivelyBlockedIndices);
-        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).build(), blockingResults.values());
+        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).build(), List.copyOf(blockingResults.values()));
     }
 
     /**
@@ -1023,24 +1067,7 @@ public class MetadataIndexStateService {
         );
     }
 
-    private static class OpenIndicesExecutor implements ClusterStateTaskExecutor<OpenIndicesTask> {
-
-        private final AllocationService allocationService;
-        private final IndexMetadataVerifier indexMetadataVerifier;
-        private final IndicesService indicesService;
-        private final ShardLimitValidator shardLimitValidator;
-
-        OpenIndicesExecutor(
-            AllocationService allocationService,
-            IndexMetadataVerifier indexMetadataVerifier,
-            IndicesService indicesService,
-            ShardLimitValidator shardLimitValidator
-        ) {
-            this.allocationService = allocationService;
-            this.indexMetadataVerifier = indexMetadataVerifier;
-            this.indicesService = indicesService;
-            this.shardLimitValidator = shardLimitValidator;
-        }
+    private class OpenIndicesExecutor implements ClusterStateTaskExecutor<OpenIndicesTask> {
 
         @Override
         public ClusterTasksResult<OpenIndicesTask> execute(ClusterState currentState, List<OpenIndicesTask> tasks) throws Exception {
@@ -1072,7 +1099,7 @@ public class MetadataIndexStateService {
                         public void onFailure(Exception e) {
                             task.onFailure(e);
                         }
-                    });
+                    }, task);
                 }
             } catch (Exception e) {
                 for (OpenIndicesTask task : tasks) {
